<resources>
    <string name="app_name">FMap</string>
    <string name="input_sms_code">输入短信验证码</string>
    <string name="sms_code_had_send">验证码已发送至%s，请在下方输入框内输入4位数验证码</string>
    <string name="sms_code_incorrect">验证码错误</string>
    <string name="resend_sms_code">重新发送</string>
    <string name="please_input_correct_mobile">请输入正确手机号</string>
    <string name="click_login">点击登录</string>
    <string name="login_experience_more">登录后体验更多新鲜功能</string>
    <string name="login_activity_reward">活动/奖励</string>
    <string name="login_sign_reward">签到领奖</string>
    <string name="user_detail_tool_tip">工具箱搬到首页</string>
    <string name="user_detail_to_see">去看看</string>
    <string name="temp_content">内容</string>
    <string name="user_detail_my_achieved">我的成就</string>
    <string name="user_detail_login_see_achieved">登录查看已获得成就</string>
    <string name="user_detail_data_contribute">数据贡献</string>
    <string name="user_detail_offline_tip">离线地图移至搜索框下</string>
    <string name="user_detail_see_contribute">查看贡献进度</string>
    <string name="user_detail_loc_unlock">地点解密</string>
    <string name="user_detail_add_loc">地点新增</string>
    <string name="user_detail_add_merchant">商户新增</string>
    <string name="user_detail_contribute_question1">奥体工作室(壹方城店)还正常营业么？</string>
    <string name="user_detail_to_answer">去回答</string>
    <string name="user_detail_contribute_question2">美味烧鹅茶餐厅还在营业么？</string>
    <string name="user_detail_help_count230">预计帮助230人</string>
    <string name="user_detail_help_count228">预计帮助228人</string>
    <string name="login_by_password">密码登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="login_error">登录遇到问题？</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="phone_cannot_empty">手机号不能为空</string>
    <string name="please_input_mobile_number">请输入手机号</string>
    <string name="personal_profile">个人资料</string>
    <string name="logo">头像</string>
    <string name="user_info_nickname">昵称</string>
    <string name="user_info_sex">性别</string>
    <string name="user_info_select_sex">请选择你的性别</string>
    <string name="user_info_age">年龄</string>
    <string name="user_info_select_birthday">请设置你的生日</string>
    <string name="user_info_sign_in">签到</string>
    <string name="user_info_sign_in_days">已连续签到10天</string>
    <string name="setting">设置</string>
    <string name="account_and_security">账户与安全</string>
    <string name="map_setting">地图设置</string>
    <string name="navigation_setting">导航设置</string>
    <string name="voice_setting">语音设置</string>
    <string name="commute_setting">通勤设置</string>
    <string name="common_trip_ways">通用出行方式</string>
    <string name="switch_city">切换城市</string>
    <string name="message_push">消息推送</string>
    <string name="download_new_version_on_wifi">WI-Fi下自动下载最新版</string>
    <string name="clear_cache">清空缓存</string>
    <string name="check_update">检查更新</string>
    <string name="about_map">关于高德地图</string>
    <string name="map_lab">小德实验室</string>
    <string name="logout">退出登录</string>

    <!--微信相关-->
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>
    <string name="location_failed_hold_on">定位失败,请稍后重试</string>
    <string name="please_select_dest_loc">请选择目的地</string>
    <string name="search">搜索</string>
    <string name="search_nearby">搜索附近</string>
    <string name="sear_loc_bus_subway">查找地点、公交、地铁</string>
    <string name="please_open_gps">请开启定位</string>
</resources>
