<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_large2">

    <com.jiyouliang.fmap.view.widget.SettingItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:sivSubtitle="@string/user_detail_see_contribute"
        app:sivSubtitleSize="14dp"
        app:sivSubtitleVisiable="true"
        app:sivTitle="@string/user_detail_data_contribute"
        app:sivTitleBlod="true"
        app:sivTitleColor="@color/user_detail_color_black"
        app:sivTitleSize="18dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:background="@drawable/user_detail_medal_rect_bg"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_size"
            android:orientation="horizontal">

            <com.jiyouliang.fmap.view.widget.VerticalIconTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:vitIcon="@drawable/user_detail_loc_unlock_icon"
                app:vitTitle="@string/user_detail_loc_unlock" />

            <com.jiyouliang.fmap.view.widget.VerticalIconTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:vitIcon="@drawable/user_detail_add_loc_icon"
                app:vitTitle="@string/user_detail_add_loc" />

            <com.jiyouliang.fmap.view.widget.VerticalIconTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:vitIcon="@drawable/user_detail_add_merchant_icon"
                app:vitTitle="@string/user_detail_add_merchant" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="@dimen/padding_size"
            android:background="@drawable/common_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_size">

            <TextView
                android:id="@+id/tv_question1"
                style="@style/NormalTextTheme.BaseTextTheme"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/tv_to_answer1"
                android:text="@string/user_detail_contribute_question1"
                android:textColor="@color/user_detail_title_color" />

            <TextView
                android:id="@+id/tv_to_answer1"
                style="@style/UserDetailRectCircleText"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/padding_size"
                android:background="@drawable/user_detail_login_rect_bg"
                android:drawablePadding="4dp"
                android:paddingLeft="@dimen/padding_large2"
                android:paddingRight="@dimen/padding_large2"
                android:text="@string/user_detail_to_answer" />

            <TextView
                style="@style/SmallTextTheme.BaseTextTheme"
                android:layout_below="@id/tv_question1"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/padding_size"
                android:text="@string/user_detail_help_count230"
                android:textColor="@color/user_detail_gray_color" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_size">

            <TextView
                android:id="@+id/tv_question2"
                style="@style/NormalTextTheme.BaseTextTheme"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/tv_to_answer2"
                android:text="@string/user_detail_contribute_question2"
                android:textColor="@color/user_detail_title_color" />

            <TextView
                android:id="@+id/tv_to_answer2"
                style="@style/UserDetailRectCircleText"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/padding_size"
                android:paddingLeft="@dimen/padding_large2"
                android:paddingRight="@dimen/padding_large2"

                android:background="@drawable/user_detail_login_rect_bg"
                android:drawablePadding="4dp"
                android:text="@string/user_detail_to_answer" />

            <TextView
                style="@style/SmallTextTheme.BaseTextTheme"
                android:layout_below="@id/tv_question2"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/padding_size"
                android:text="@string/user_detail_help_count228"
                android:textColor="@color/user_detail_gray_color" />

        </RelativeLayout>
    </LinearLayout>


</LinearLayout>