<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.jiyouliang.fmap.view.widget.TopTitleView
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ttvRightTitleVisiable="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_large2"
        android:layout_marginTop="20dp"
        android:text="@string/input_sms_code"
        android:textColor="@color/text_color_black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_title" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_large2"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/padding_large2"
        android:text="@string/sms_code_had_send"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc" />


    <com.jiyouliang.fmap.view.widget.KeyboardContainerView
        android:id="@+id/key_container_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/tv_error"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_code_incorrect"
            android:textColor="#FF767A"
            android:textSize="14sp" />

        <com.jiyouliang.fmap.view.widget.KeyboardInputView
            android:id="@+id/keyboard_input_view"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

        <TextView
            android:id="@+id/tv_sms_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/resend_sms_code"
            android:layout_marginBottom="50dp"
            android:textColor="@color/resend_sms_color" />

        <com.jiyouliang.fmap.view.widget.NumberKeyboardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.jiyouliang.fmap.view.widget.KeyboardContainerView>


</android.support.constraint.ConstraintLayout>